force-app/main/default/objects/BMCServiceDesk__BMC_CommonCILink__c/BMCServiceDesk__BMC_CommonCILink__c.object-meta.xml
<CustomObject>
    <customHelpPage>BMCServiceDesk__StdFormHelpCommonLink</customHelpPage>
    <description>This object allows you to store data for all items associated with CIs.</description>
    <label>Task CI Link</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Task CI Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>