force-app/main/default/objects/BMCServiceDesk__BMC_CommonCILink__c/fields/BMCServiceDesk__CIInstance__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__CIInstance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Configuration Item</label>
    <referenceTo>BMCServiceDesk__BMC_BaseElement__c</referenceTo>
    <relationshipLabel>BMC_CommonCILinks</relationshipLabel>
    <relationshipName>BMC_CommonCILinks</relationshipName>
    <type>Lookup</type>
</CustomField>