force-app/main/default/objects/BMCServiceDesk__BMC_CommonCILink__c/fields/BMCServiceDesk__FKTask__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKTask__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CI link to Task on Std taask layout</description>
    <label>Task</label>
    <referenceTo>BMCServiceDesk__Task__c</referenceTo>
    <relationshipLabel>Linked Services, Configuration Items and Assets</relationshipLabel>
    <relationshipName>BMC_CommonCILinks</relationshipName>
    <type>Lookup</type>
</CustomField>