force-app/main/default/objects/BMCServiceDesk__BMC_CommonCILink__c/fields/BMCServiceDesk__InstanceID__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__InstanceID__c</fullName>
    <formula>BMCServiceDesk__CIInstance__r.BMCServiceDesk__InstanceID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>InstanceID</label>
    <type>Text</type>
</CustomField>