force-app/main/default/objects/BMCServiceDesk__BMC_CommonCILink__c/fields/BMCServiceDesk__ObjectRecordID__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ObjectRecordID__c</fullName>
    <label>ObjectRecordID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>