force-app/main/default/objects/BMCServiceDesk__BMC_CommonCILink__c/listViews/BMCServiceDesk__All.listView-meta.xml
<ListView>
    <fullName>BMCServiceDesk__All</fullName>
    <columns>BMCServiceDesk__ObjectName__c</columns>
    <columns>BMCServiceDesk__ObjectRecordID__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>